--- a/.gitignore
+++ b/.gitignore
@@ -38,10 +38,10 @@ coverage
 bower_components
 
 # node-waf configuration
-.lock-wscript
+#.lock-wscript
 
 # Compiled binary addons (http://nodejs.org/api/addons.html)
-build/Release
+#build/Release
 
 # Dependency directories
 # node_modules/
@@ -53,13 +53,13 @@ build/Release
 .eslintcache
 
 # Optional REPL history
-.node_repl_history
+#.node_repl_history
 
 # Output of 'npm pack'
-*.tgz
+#*.tgz
 
 # Yarn Integrity file
-.yarn-integrity
+#.yarn-integrity
 
 # dotenv environment variables file
-.env
+#.env
